# Scone

./: .gitignore  CHANGELOG.md  Eval.hs  LICENSE  LispThing.cabal  PlaceholderLisp.cabal  README.md  Scone.cabal  TODO.md  document.phl  flake.nix  grammar.md  new.phl  old.phl  result  std.scn  test.phl  test.scn
src/: Eval.hs  LispVal.hs  Main.hs  Parser.hs  Prim.hs  Val.hs
src/dist-newstyle/cache/: compiler
